# pillars

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: CI.yml  nox.yml
pillars/: __init__.py  emdsa.py
src/: core.rs  emd_classification.rs  lib.rs  matching.rs  mod.rs  netcdf_utils.rs  tmp1d17sh  tmp1dginu  tmp254c18  tmp2dtcya  tmp38n257  tmp3sr5tf  tmp43dylj  tmp4_u3rb  tmp4lj_fy  tmp4wzk4a  tmp59yal6  tmp5ni36m  tmp62_599  tmp63ocj7  tmp8fsar4  tmp9fhdzh  tmp_fyjei  tmp_z86a3  tmpaas89n  tmpalswg9  tmpamsir9  tmpauyi24  tmpb044w3  tmpc2a3vz  tmpcacre_  tmpcsoxj4  tmpd0ejkw  tmpdwsco7  tmpe4wxu7  tmpg1sonr  tmpgns63k  tmph8dlx8  tmpi3ywgf  tmpipta7m  (+27 more)
tests/: test_functions.py
