[package]
name = "pillars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pillars"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module", "multiple-pymethods"] }
ndarray = { version="0.15.4", features = ["rayon"]}
numpy = "0.16.2"
pathfinding = "3.0.13"
ordered-float = "3.0.0"