[package]
name = "pillars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pillars"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module", "multiple-pymethods"] }
ndarray = { version="0.15.6", features = ["rayon"]}
numpy = "0.17.2"
pathfinding = "4.0.0"
ordered-float = "3.4.0"
# netcdf = { version = "0.7.0", features = ["static"] }
